--- a/src/app/Layout/main-outlet/main-outlet.html
+++ b/src/app/Layout/main-outlet/main-outlet.html
@@ -8,9 +8,9 @@
 >
 <app-navbar/>
 
- <div class="container my-5">
+ <!-- <div class="container my-5">
       <router-outlet></router-outlet>
                 <app-footer />
 
- </div>
+ </div> -->
 </div>
