--- a/src/app/Pages/profile/profile.scss
+++ b/src/app/Pages/profile/profile.scss
@@ -1,6 +1,6 @@
 .imageCover{
-    width: 90%;
-    height: 240px;
+    width: 260px;
+    height: 260px;
     object-fit: cover !important;
     border-radius: 8px;
 }
