--- a/src/app/Layout/mainlayout-non-nav/mainlayout-non-nav.html
+++ b/src/app/Layout/mainlayout-non-nav/mainlayout-non-nav.html
@@ -3,6 +3,6 @@
         <div class="pb-5 pt-5 logo text-start" routerLink="/">
                 <img class="" src="assets/img/logo.svg" alt="">
         </div>
-        <<router-outlet></router-outlet>
+        <router-outlet></router-outlet>
                 <app-footer />
 </div>
