--- a/src/app/Pages/Auth/login/login.html
+++ b/src/app/Pages/Auth/login/login.html
@@ -1,23 +1,31 @@
-<h1 class="mb-5 text-white text-end big">LOGIN</h1>
+<h1 class="mb-0 text-white text-end big">LOGIN</h1>
 
 <div class="signup d-flex w-100 h-50    ">
     <div class="rightSide w-50">
         <img src="assets/img/login.png" alt="" width="100%">
     </div>
     <form class="signup-box rounded-3 text-white w-50" [formGroup]="loginForm">
-        <h1 class="mb-5 text-whitebig">LOGIN</h1>
+        <h1 class="mb-5 text-whitebig mx-0">LOGIN</h1>
 
         <div class="row">
             <div class="row second">
-                <input class="mt-2 px-0 py-3" type="email" formControlName="email" placeholder="Email Address"
+                <input class="mt-2 px-0 py-3 px-3" type="email" formControlName="email" placeholder="Email Address"
                     aria-label="Email Address" />
-                <input class="mt-5 px-0 py-3" type="password" formControlName="password" placeholder="Password" />
+                <input class="mt-5 px-0 py-3  px-3" type="password" formControlName="password" placeholder="Password" />
             </div>
         </div>
-
-        <h2 class="mt-5  text-end pt-sm-4 logout cr" style="color: #00bec5;" (click)="onLogin()">SUBMIT <i
-                class="fa-solid fa-arrow-right fs-5" style="color: #00bec5;"></i></h2>
-
+   <div class="w-100  d-flex    justify-content-end align-items-center mt-3">
+    <button
+    class="mt-3 btn h2 border-0 text-end logout px-3"
+    style="color: #00bec5; cursor: pointer;"
+    (click)="onLogin()"
+      [disabled]="isLoading()"
+  [style.cursor]="isLoading() ? 'not-allowed' : 'pointer'"
+  >
+             {{ isLoading() ? 'Logging in...' : 'Login' }}
+    <i class=" fa-solid fa-arrow-right fs-4" style="color: #00bec5;"></i>
+  </button>
+ </div>
     </form>
 
 
