--- a/src/app/Pages/home/home.html
+++ b/src/app/Pages/home/home.html
@@ -1,7 +1,6 @@
 <div class="text-white team  ">
-    <div class="d-flex justify-content-between align-items-center headerText">
-        <h2 class=" pt-sm-4 logout" style="color: #00bec5; cursor: pointer;" routerLink="/addemployee">Add Employee <i
-                class="fa-solid fa-arrow-right fs-5" style="color: #00bec5;"></i></h2>
+    <div class="d-flex justify-content-end align-items-center headerText">
+
         <h1 class=" big mb-0">THE TEAM</h1>
 
     </div>
@@ -9,31 +8,28 @@
         <div class=" row g-3 g-lg-4">
             <div class="col-12 col-lg-6 pb-3 px-0 pe-3">
                 <div class="d-flex flex-column justify-content-between h-100">
-                    <h1 class="mb-0">{{ today | date: 'd, MMM' | uppercase }}</h1>
+                    <h1 class="mb-0">{{ today | dateWithSuffix | uppercase }}</h1>
                     <h4>Hello, Youssef</h4>
                     <div
                         class="project-stats rounded blue ">
 
                         <div class="p-0 text-center  mt-2 m-0 mb-0">
-                            <p class="mb-0">Rising Talent</p>
+                            <p class="mb-0">Completed</p>
                             <p class="mb-0 mt-2 fs-3">{{getProjectCounts().risingTalent| leadingZero}}</p>
                         </div>
                         <div class="p-0 text-center  mt-2 m-0 mb-0">
-                            <p class="mb-0">Design Star </p>
+                            <p class="mb-0">Paused</p>
                             <p class="mb-0  mt-2  fs-3">{{getProjectCounts().designStar| leadingZero}}</p>
                         </div>
                         <div class="p-0 text-center  mt-2 m-0 mb-0">
-                            <p class="mb-0">Top Tier </p>
+                            <p class="mb-0">In Progress </p>
                             <p class="mb-0  mt-2  fs-3">{{getProjectCounts().topTier| leadingZero}}</p>
                         </div>
-                        <div class="p-0 text-center mt-2 m-0 mb-0">
-                            <p class="mb-0">The Maestro </p>
-                            <p class="mb-0  mt-2  fs-3">{{getProjectCounts().maestro| leadingZero}}</p>
-                        </div>
+                      
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 pb-3 px-0  ">
+            <div class="col-lg-6 pb-3 px-2  ">
                 <div class="p-md-4 p-3 mx-0 rounded row h-100 right-box pe-0">
                     <div class=" inner-box col rounded " style="flex: 0;">
                         <div class="p-3 d-flex gap-5 align-items-end   ">
@@ -109,8 +105,9 @@
                                 <div class="pb-0 card-body">
                                     <h6 class="mb-1 fw-bold card-title">{{ card.name }}</h6>
                                     <p class="mb-1 card-text">{{ card.jobTitle }}</p>
+                                    <p class="mb-1 card-text">{{ card.createdAt | date }}</p>
 
-                                    <div class="mt-4 row">
+                                    <div class="mt-3 row">
                                         <div class="col">
                                             @switch (card.employeeBadge) {
                                             @case (0) { <p class="mt-2 mb-2">Rising Talent</p> }
@@ -135,4 +132,6 @@
         </div>
     </div>
 
+            <h2 class=" pt-sm-4 logout text-end" style="color: #00bec5; cursor: pointer;" routerLink="/addemployee">Add Employee <i
+                class="fa-solid fa-arrow-right fs-5" style="color: #00bec5;"></i></h2>
 </div>
