--- a/src/app/Pages/Interfaces_Clients/projectDetalis/components/feedback/feedback.html
+++ b/src/app/Pages/Interfaces_Clients/projectDetalis/components/feedback/feedback.html
@@ -6,7 +6,7 @@
                     <h1 class=" text-end px-0 ">FEEDBACKS</h1>
  
         </div>
-        <div class="p-lg-5 p-4 pb-5 rounded-3 g-4 row feedback-box mb-5 pe-lg-4">
+        <div class="p-lg-5 p-4 pb-5 rounded g-4 row feedback-box mb-5 pe-lg-4">
             <div class="col-1 p-0 mt-0">
                 <p class="mb-0">AVERAGE </p>
                 <h2 class="mb-0">FEEDBACK</h2>
@@ -24,7 +24,7 @@
             <div class="feed-boxfeed px-0">
                 
                    @for (feedback of Feedbacks(); track  $index ; let i = $index) {
-                    <div class="p-3 py-3 mx-0 mt-4 row rounded-3 feedback-card cr">
+                    <div class="p-3 py-3 mx-0 mt-4 row rounded feedback-card cr">
                     <div class="col-xl-8 col-9">
                         <div class="row ">
                             <div class="me-xxl-0 me-lg-3 px-0 col-lg-2 col-sm-1 me-4 me-lg-0">
