--- a/src/app/Pages/Interfaces_Clients/set-meeting/set-meeting.html
+++ b/src/app/Pages/Interfaces_Clients/set-meeting/set-meeting.html
@@ -2,7 +2,7 @@
     <h1 class="text-end text-white big mb-0">SET A MEETING</h1>
 </div>
 
-<div class=" meeting-container text-white p-4 mt-4 rounded-3">
+<div class=" meeting-container text-white p-4 mt-4 rounded">
     <!-- Time slots -->
     <div class="time-slots ps-3 pe-0 border-right">
         <h6>Time -</h6>
@@ -41,7 +41,7 @@
     </div>
 </div>
 
-<div class="row meeting-container text-white p-4 mt-4 rounded-3">
+<div class="row meeting-container text-white p-4 mt-4 rounded">
     <div class="div col me-lg-5 px-0">
         <p class="mb-1 mt-4">Choose projects</p>
         <div class="leftlow p-2">
