--- a/src/app/Pages/Interfaces_Employee/feedback-employees/feedback-employees.html
+++ b/src/app/Pages/Interfaces_Employee/feedback-employees/feedback-employees.html
@@ -1,7 +1,7 @@
 <div class="text-white feed-back px-md-0 px-3">
     <div class=" " style="background-image: none;">
 <h1 class="mt-5 text-white px text-end big mb-4"> FEEDBACK</h1>
-        <div class="p-lg-5 p-4 pb-5 rounded-3 g-4 row feedback-box  pe-lg-4">
+        <div class="p-lg-5 p-4 pb-5 rounded g-4 row feedback-box  pe-lg-4">
             <div class="col-1 p-0 mt-0">
                 <p class="mb-0">AVERAGE </p>
                 <h2 class="mb-0">FEEDBACK</h2>
@@ -19,7 +19,7 @@
             <div class="feed-boxfeed px-0">
                 
                    @for (feedback of Feedbacks().feedbacks; track  $index ; let i = $index) {
-                    <div class="p-3 py-3 mx-0 mt-4 row rounded-3 feedback-card cr" [routerLink]="['/employee/getfeedback',feedback.id]">
+                    <div class="p-3 py-3 mx-0 mt-4 row rounded feedback-card cr" [routerLink]="['/employee/getfeedback',feedback.id]">
                     <div class="col-xl-8 col-9">
                         <div class="row ">
                             <div class="me-xxl-0 me-lg-3 px-0 col-lg-2 col-sm-1 me-4 me-lg-0">
