--- a/src/app/Pages/Interfaces_Employee/projectDetalis/components/update-summary/update-summary.html
+++ b/src/app/Pages/Interfaces_Employee/projectDetalis/components/update-summary/update-summary.html
@@ -1,7 +1,7 @@
 <div class="CreateAccount px-3">
     <h1 class="mt-5 text-white text-end big">UPDATE SUMMARY</h1>
 
-    <form class="CreateAccount-box rounded-3 text-white">
+    <form class="CreateAccount-box rounded text-white">
         <div class="row">
             <p class="fw-bold">Fill in Summary Information</p>
 
