--- a/src/app/Pages/add-feedback-employee/add-feedback-employee.html
+++ b/src/app/Pages/add-feedback-employee/add-feedback-employee.html
@@ -2,7 +2,7 @@
   <h1 class="mt-5 text-white text-end big">FEEDBACK</h1>
 
   <!-- Question 01 -->
-  <div class="first-feedback p-3 rounded-3 text-white border-0">
+  <div class="first-feedback p-3 rounded text-white border-0">
     <div class="row">
       <div class="col-lg-1 me-5">
         <img src="assets/img/01.png" alt="Question Icon">
@@ -32,7 +32,7 @@
   </div>
 
   <!-- Question 02 -->
-  <div class="second-feedback p-3 rounded-3 text-white mt-3">
+  <div class="second-feedback p-3 rounded text-white mt-3">
     <div class="row">
       <div class="col-lg-1 me-5">
         <img src="assets/img/02.png" alt="">
