--- a/src/app/Pages/add-payments/add-payments.html
+++ b/src/app/Pages/add-payments/add-payments.html
@@ -1,7 +1,7 @@
 <div class=" mt-5 pt-5">
     <h1 class="text-end text-white mb-0">Add A Payments</h1>
 </div>
-<div class="row meeting-container text-white p-4 mt-4 rounded-3">
+<div class="row meeting-container text-white p-4 mt-4 rounded">
     <div class="div col me-lg-5 px-0">
         <p class="mb-1 mt-4">Choose projects</p>
         <div class="leftlow p-2">
@@ -28,7 +28,7 @@
 
 </div>
 <div class="meeting-container"> <!-- Question 02 -->
-    <div class="second-feedback w-100 rounded-3 text-white mt-3">
+    <div class="second-feedback w-100 rounded text-white mt-3">
         <div class="row w-100">
    
             <div class="col ms-xl-2 ms-lg-5 mt-lg-0 mt-4">
@@ -44,7 +44,7 @@
         </div>
     </div>
 </div>
-<div class=" meeting-container text-white p-4 mt-4 rounded-3">
+<div class=" meeting-container text-white p-4 mt-4 rounded">
 
     <!-- Calendar -->
     <div class="calendar px-5 mt-5 pt-1">
