--- a/src/app/Pages/get-feedback/get-feedback.html
+++ b/src/app/Pages/get-feedback/get-feedback.html
@@ -3,7 +3,7 @@
     <h1 class="mt-5 text-white text-end big">FEEDBACK</h1>
 
     <!-- Question 01 -->
-    <div class="first-feedback p-3 rounded-3 text-white border-0">
+    <div class="first-feedback p-3 rounded text-white border-0">
       <div class="row">
         <div class="col-lg-1 me-5">
           <img src="assets/img/01.png" alt="Question Icon">
@@ -91,7 +91,7 @@
     </div>
 
     <!-- Question 02 -->
-    <div class="second-feedback p-3 rounded-3 text-white mt-3">
+    <div class="second-feedback p-3 rounded text-white mt-3">
       <div class="row">
         <div class="col-lg-1 me-5">
           <img src="assets/img/02.png" alt="">
@@ -108,7 +108,7 @@
     </div>
 
     <!-- Question 03 -->
-    <div class="third-feedback p-3 rounded-3 text-white mt-3">
+    <div class="third-feedback p-3 rounded text-white mt-3">
       <div class="row">
         <div class="col-lg-1 me-5">
           <img src="assets/img/03.png" alt="">
@@ -119,28 +119,28 @@
 
           <div class="d-flex mt-4"
              >
-            <button class="rounded-3"                [class.clicked]="recommendation === 'Unlikely'"
+            <button class="rounded"                [class.clicked]="recommendation === 'Unlikely'"
 ></button>
             <p class="low ms-2 m-0 mt-1">Unlikely</p>
           </div>
 
           <div class="d-flex mt-1"
              >
-            <button class="rounded-3"                [class.clicked]="recommendation === 'Maybe'"
+            <button class="rounded"                [class.clicked]="recommendation === 'Maybe'"
 ></button>
             <p class="low ms-2 m-0 mt-1">Maybe</p>
           </div>
 
           <div class="d-flex mt-1"
               >
-            <button class="rounded-3"                [class.clicked]="recommendation === 'Likely'"
+            <button class="rounded"                [class.clicked]="recommendation === 'Likely'"
 ></button>
             <p class="low ms-2 m-0 mt-1">Likely</p>
           </div>
 
           <div class="d-flex mt-1"
               >
-            <button class="rounded-3"                [class.clicked]="recommendation === 'Very Likely'"></button>
+            <button class="rounded"                [class.clicked]="recommendation === 'Very Likely'"></button>
             <p class="low ms-2 m-0 mt-1">Very Likely</p>
           </div>
         </div>
