--- a/src/app/Pages/profile/profile.scss
+++ b/src/app/Pages/profile/profile.scss
@@ -16,3 +16,12 @@
     margin-top: 10px;
    }
 }
+.col .smallMonth{
+    font-size: 8px;
+    width: fit-content;
+    padding-left: 5px;
+    margin-bottom: 4px !important;
+}
+.booked{
+    color:#00BEC5 !important;
+}
