--- a/src/app/Pages/projects/projectDetalis/components/show-meeting/show-meeting.html
+++ b/src/app/Pages/projects/projectDetalis/components/show-meeting/show-meeting.html
@@ -3,7 +3,7 @@
     <h1 class="text-end text-white mb-0">TIME MEETING</h1>
 </div>
 @for(meet of meetings(); track $index) {
-<div class=" meeting-container my-3 text-white p-4 rounded-3" style="background-color: #2d2d2d; color: white;">
+<div class=" meeting-container my-3 text-white p-4 rounded" style="background-color: #2d2d2d; color: white;">
     <div class="meeting-info">
         <h5 class="mb-0">
             <span class="booked">{{ meet.clientName }}</span> booked a meeting
@@ -14,7 +14,7 @@
 
 }
 @empty {
-<div class=" meeting-container my-3 text-center p-4 rounded-3" style="background-color: #2d2d2d; color: white;">
+<div class=" meeting-container my-3 text-center p-4 rounded" style="background-color: #2d2d2d; color: white;">
     <div class="meeting-info">
         <h5 class="mb-0 booked">
             No meetings booked yet.
