--- a/src/app/Pages/service/components/addservice/addservice.html
+++ b/src/app/Pages/service/components/addservice/addservice.html
@@ -4,7 +4,7 @@
     <h1 class="mt-5 text-white text-end big">Create Service</h1>
 
     <form     [formGroup]="addServiceForm"
- class="CreateAccount-box rounded-3 text-white">
+ class="CreateAccount-box rounded text-white">
         <div class="row">
                     <p class="fw-bold">Fill in Client Information</p>
 
