--- a/src/app/Pages/service/components/editservice/editservice.html
+++ b/src/app/Pages/service/components/editservice/editservice.html
@@ -1,7 +1,7 @@
 <div class="CreateAccount px-3">
   <h1 class="mt-5 text-white text-end big">Edit Service</h1>
 
-  <form [formGroup]="serviceForm" (ngSubmit)="onSubmit()" class="CreateAccount-box rounded-3 text-white">
+  <form [formGroup]="serviceForm" (ngSubmit)="onSubmit()" class="CreateAccount-box rounded text-white">
     <div class="row">
       <p class="fw-bold">Edit Service Information</p>
 
