--- a/src/app/Pages/Auth/login/login.html
+++ b/src/app/Pages/Auth/login/login.html
@@ -4,7 +4,7 @@
     <div class="rightSide w-50">
         <img src="assets/img/login.png" alt="" width="100%">
     </div>
-    <form class="signup-box rounded-3 text-white w-50" [formGroup]="loginForm">
+    <form class="signup-box rounded text-white w-50" [formGroup]="loginForm">
         <h1 class="mb-5 text-whitebig mx-0">LOGIN</h1>
 
         <div class="row">
