--- a/src/app/Pages/Auth/signup/signup.html
+++ b/src/app/Pages/Auth/signup/signup.html
@@ -2,7 +2,7 @@
     <!-- Navbar -->
     <h1 class="mt-5 text-white text-end big">SIGN UP</h1>
 
-    <form [formGroup]="signupForm" class="signup-box rounded-3 text-white">
+    <form [formGroup]="signupForm" class="signup-box rounded text-white">
       <div class="row">
         <!-- Left Side -->
         <div class="col-md-6 px-0">
@@ -11,7 +11,7 @@
           <!-- Image Upload -->
           <div class="image-input-container d-flex justify-content-start align-items-center my-3">
             <label for="image-input"
-                   class="image-box rounded-3 d-flex justify-content-center border-0 align-items-center"
+                   class="image-box rounded d-flex justify-content-center border-0 align-items-center"
                    [ngStyle]="{'background-image': imagePreview ? 'url(' + imagePreview + ')' : 'none',
                                'background-size': 'cover',
                                'background-position': 'center'}">
