--- a/src/app/Pages/Interfaces_Clients/feedbackclient/feedbackclient.html
+++ b/src/app/Pages/Interfaces_Clients/feedbackclient/feedbackclient.html
@@ -2,7 +2,7 @@
     <div class=" " style="background-image: none;">
 
         <h1 class="mb-4 text-end  big px-0 ">FEEDBACKS</h1>
-        <div class="p-lg-5 p-4 pb-5 rounded-3 g-4 row feedback-box  pe-lg-4">
+        <div class="p-lg-5 p-4 pb-5 rounded g-4 row feedback-box  pe-lg-4">
             <div class="col-1 p-0 mt-0">
                 <p class="mb-0">AVERAGE </p>
                 <h2 class="mb-0">FEEDBACK</h2>
@@ -20,7 +20,7 @@
             <div class="feed-boxfeed px-0">
                 
                    @for (feedback of Feedbacks().feedbacks; track  $index ; let i = $index) {
-                    <div class="p-3 py-3 mx-0 mt-4 row rounded-3 feedback-card cr"   [routerLink]="['/client/getfeedback',feedback.id]">
+                    <div class="p-3 py-3 mx-0 mt-4 row rounded feedback-card cr"   [routerLink]="['/client/getfeedback',feedback.id]">
                     <div class="col-xl-8 col-9">
                         <div class="row ">
                             <div class="me-xxl-0 me-lg-3 px-0 col-lg-2 col-sm-1 me-4 me-lg-0">
