--- a/src/app/Pages/Interfaces_Clients/payments/payments.html
+++ b/src/app/Pages/Interfaces_Clients/payments/payments.html
@@ -4,7 +4,7 @@
 
 </div>
 
-<div class="payments-container text-white p-4  rounded-3 mb-5 pb-5 " style="background-color: #171818;">
+<div class="payments-container text-white p-4  rounded mb-5 pb-5 " style="background-color: #171818;">
     <div class="d-flex justify-content-between gap-3 align-items-start ">
 
         <!-- Months -->
@@ -24,7 +24,7 @@
             <h6 style="font-size: 12px; margin-bottom: 20px;">PAYMENTS</h6>
 
             @for (payment of payments(); track payment.id) {
-            <button class="py-3 text-start text-white ps-3 w-100 mb-2 rounded-3"  style="
+            <button class="py-3 text-start text-white ps-3 w-100 mb-2 rounded"  style="
                font-size: 16px; border:none;"  [ngClass]="!payment.isPaid ? 'notifiction-card' : 'notifiction-card-none'"  >
 
                 <span class="booked">{{ payment.clientName }}</span>
@@ -37,7 +37,7 @@
             }
             @empty {
             <button
-                class="py-3 text-white text-center ps-3 w-100 d-flex align-items-center justify-content-center rounded-3"
+                class="py-3 text-white text-center ps-3 w-100 d-flex align-items-center justify-content-center rounded"
                 style="background: linear-gradient(90deg, #2D2D2D00 0%, #00BEC540 65%);
                font-size: 16px; border:none;">
                 <p class="m-0 text-center">No payments found for this month</p>
