--- a/src/app/Pages/Interfaces_Clients/projectDetalis/components/chat/chat.html
+++ b/src/app/Pages/Interfaces_Clients/projectDetalis/components/chat/chat.html
@@ -2,7 +2,7 @@
   <div class="project-chat px-md-0 px-3">
     <h1 class="big text-end text-white mt-5 pt-5 mb-3">PROJECT CHAT</h1>
 
-    <div class="project-chat-box rounded-3 p-md-4 text-white ">
+    <div class="project-chat-box rounded p-md-4 text-white ">
       <div class="chat-container">
         <div class="tabs">
           <button class="tab-button" [class.active]="activeTab === 'chat'" (click)="activeTab = 'chat'">
