--- a/src/app/Pages/Interfaces_Employee/myprofile/myprofile.html
+++ b/src/app/Pages/Interfaces_Employee/myprofile/myprofile.html
@@ -1,6 +1,6 @@
 <h1 class="mt-5 text-white px text-end big">PROFILE EMPLOYEE</h1>
 <div class="text-white profile  mb-5">
-    <div class=" p-xl-5 p-4 rounded-3">
+    <div class=" p-xl-5 p-4 rounded">
         <div class="row">
             <div class="pt-lg-0 col half-logo"><img class="top mt-0 mb-3" src="assets/img/half-logo.svg" alt="">
             </div>
@@ -31,7 +31,7 @@
             <div class="px-0 col-lg-9 col">
                 <h1 class="mb-0">{{aboutEmployees()?.userName }}</h1>
                 <p class="mb-0">{{aboutEmployees()?.jobTitle }}</p>
-                <div class="pt-1 rounded-3 inner">
+                <div class="pt-1 rounded inner">
                     <div class="mx-0 row first-box ">
                         <div class="px-3 py-1 ms-lg-2 col">
                             <p class="mt-2">SALARY</p>
@@ -70,7 +70,7 @@
         </div>
          <div class="mx-0 row gap-0">
             <div class="col-lg-6 px-2 ms-1 pe-2 me-1 me-lg-0 pe-lg-4 pe-3 mx-lg-0" >
-                <div class="p-md-4 p-3 pe-md-0 left-box row rounded-3" style="padding-top: 35px !important; padding-bottom: 35px  !important;">
+                <div class="p-md-4 p-3 pe-md-0 left-box row rounded" style="padding-top: 35px !important; padding-bottom: 35px  !important;">
                     <h3>KEEP IT UP !</h3>
                     <div class="col">
                         <img id="small-flag" src="assets/img/white-flag.svg" alt="">
