--- a/src/app/Pages/Interfaces_Employee/projectDetalis/components/posts/posts.html
+++ b/src/app/Pages/Interfaces_Employee/projectDetalis/components/posts/posts.html
@@ -4,7 +4,7 @@
       <div class="d-flex justify-content-between mb-3">
         <div class="col-5">
           <div
-            class="blue text-center p-2 rounded-3 pe-2"
+            class="blue text-center p-2 rounded pe-2"
             style="background-color: #0b6b6e; margin-left: -70px"
           >
             <h2 class="pe-4 mb-0">SOCIAL MEDIA</h2>
@@ -12,7 +12,7 @@
         </div>
         <div class="col-2">
           <div
-            class="blue btnlink text-center p-2 rounded-3 pe-2"
+            class="blue btnlink text-center p-2 rounded pe-2"
             style="background-color: #0b6b6e; margin-right: -70px"
           >
             <h2 class="pe-4 mb-0" (click)="goAddPost()">Add post</h2>
@@ -22,7 +22,7 @@
       <div class="col-8 px-3">
         <router-outlet></router-outlet>
       </div>
-      <div class="d-flex col rounded-3 px-3 ps-0" style="background-color: transparent">
+      <div class="d-flex col rounded px-3 ps-0" style="background-color: transparent">
         <!-- month-picker.component.html -->
         <div class="month-picker d-flex w-100 justify-content-between flex-column gap-2">
           <div class="header m-0">
@@ -160,7 +160,7 @@
     *ngFor="let emp of Collaborators()"
     [src]="baseurl + emp.imageUrl"
     [alt]="emp.name"
-    class=" rounded-3"
+    class=" rounded"
     height="50"
     width="50"
   />
@@ -169,7 +169,7 @@
       </div>
     </div>
 
-    <div class="bar-wrapper mt-3 rounded-3" style="height: 12px">
+    <div class="bar-wrapper mt-3 rounded" style="height: 12px">
       <div class="bar-glow" [style.width.%]="progress"></div>
       <div class="bar-fill" [style.width.%]="progress"></div>
     </div>
