--- a/src/app/Pages/client-profile/client-profile.html
+++ b/src/app/Pages/client-profile/client-profile.html
@@ -2,11 +2,11 @@
 <div class="text-white client-profile p-md-5 p-3 mb-5">
   <div class="d-flex justify-content-end">
     @switch (aboutclient()?.clientType) { @case (0) {
-    <h3 class="term pt-md-3 pt-2 pb-1 mb-3 rounded-3">Old Client</h3>
+    <h3 class="term pt-md-3 pt-2 pb-1 mb-3 rounded">Old Client</h3>
     } @case (1) {
-    <h3 class="term pt-md-3 pt-2 pb-1 mb-3 rounded-3">Long Term</h3>
+    <h3 class="term pt-md-3 pt-2 pb-1 mb-3 rounded">Long Term</h3>
     } @case (2) {
-    <h3 class="term pt-md-3 pt-2 pb-1 mb-3 rounded-3">New Client</h3>
+    <h3 class="term pt-md-3 pt-2 pb-1 mb-3 rounded">New Client</h3>
     } }
   </div>
   <div class="d-flex resCoulum">
@@ -62,7 +62,7 @@
 
   <!-- <div class="mx-0 g-5 row">
     <div class="col-lg-6 ps-2 pe-3 ms-1 ms-lg-0">
-      <div class="d-flex row left-box rounded-3 p-4">
+      <div class="d-flex row left-box rounded p-4">
         <div class="col px-0">
           <h6 class="low">ASSIGEND TO :</h6>
           <h4 class="mb-0">YOUSSEF - AYMAN</h4>
@@ -74,7 +74,7 @@
             <div><img src="assets/img/Mask group (3).svg" alt="" /></div>
           </div>
         </div>
-        <div class="d-flex rounded-3 px-0">
+        <div class="d-flex rounded px-0">
           <div class="col ps-0 mt-auto">
             <p class="small mb-0">4TH, OCT</p>
           </div>
@@ -87,7 +87,7 @@
       </div>
     </div>
     <div class="col-lg-6 ps-lg-3 ps-0 pe-0">
-      <div class="right-box h-100 rounded-3 p-4">
+      <div class="right-box h-100 rounded p-4">
         <div class="row ps-0 pe-3 ms-0">
           <div class="col-lg col-8 px-0 pe-0">
             <h6 class="">GAFLA - SOCIAL MEDIA</h6>
