--- a/src/app/Pages/client/components/addclients/addclients.html
+++ b/src/app/Pages/client/components/addclients/addclients.html
@@ -2,7 +2,7 @@
 
   <h1 class="mt-5 text-white text-end big">Create Client</h1>
 
-  <form [formGroup]="createAccountForm" class="CreateAccount-box rounded-3 text-white">
+  <form [formGroup]="createAccountForm" class="CreateAccount-box rounded text-white">
     <div class="row">
       <!-- Left Side -->
       <div class="col-md-6 px-0">
@@ -12,7 +12,7 @@
         <div class="image-input-container d-flex justify-content-start align-items-center my-3">
           <label
             for="image-input"
-            class="image-box rounded-3 d-flex justify-content-center border-0 align-items-center"
+            class="image-box rounded d-flex justify-content-center border-0 align-items-center"
             [ngStyle]="{
               'background-image': imagePreview ? 'url(' + imagePreview + ')' : 'none',
               'background-size': 'cover',
