--- a/src/app/Pages/projects/projectDetalis/components/add-media-buying/add-media-buying.html
+++ b/src/app/Pages/projects/projectDetalis/components/add-media-buying/add-media-buying.html
@@ -3,21 +3,21 @@
     <div class="row">
       <!-- Left: Media Buying & Campaign Type -->
       <div class="col-md-4 btnsactive">
-        <div class="blue text-center p-2 rounded-3 mb-4" style="background-color: #0b6b6e">
+        <div class="blue text-center p-2 rounded mb-4" style="background-color: #0b6b6e">
           <h2 class="mb-0">Media Buying</h2>
         </div>
         <h6 class="mt-4">Campaign Type</h6>
-        <button class="w-100 rounded-3 py-2 text-white mb-2 campaign-btn" [class.active]="campaignType() === 0"
+        <button class="w-100 rounded py-2 text-white mb-2 campaign-btn" [class.active]="campaignType() === 0"
           (click)="selectCampaign('Engagement')">
           Engagement
         </button>
 
-        <button class="w-100 rounded-3 py-2 text-white mb-2 campaign-btn" [class.active]="campaignType() === 1"
+        <button class="w-100 rounded py-2 text-white mb-2 campaign-btn" [class.active]="campaignType() === 1"
           (click)="selectCampaign('Awareness')">
           Awareness
         </button>
 
-        <button class="w-100 rounded-3 py-2 text-white mb-2 campaign-btn" [class.active]="campaignType() === 2"
+        <button class="w-100 rounded py-2 text-white mb-2 campaign-btn" [class.active]="campaignType() === 2"
           (click)="selectCampaign('Sales')">
           Sales
         </button>
@@ -74,7 +74,7 @@
       <div class="d-flex mb-2 justify-content-between align-items-center">
         <h6 class="px-0">Campaign Stats</h6>
       </div>
-      <div class="p-3 rounded-3" style="background: linear-gradient(to right, #001a1a, #005e5e)">
+      <div class="p-3 rounded" style="background: linear-gradient(to right, #001a1a, #005e5e)">
         <div class="statesCards">
           @for (stat of mediaBuyingStats(); track stat.id) {
               <div class="stat-card " >
