--- a/src/app/Pages/projects/projectDetalis/components/upload-files/upload-files.html
+++ b/src/app/Pages/projects/projectDetalis/components/upload-files/upload-files.html
@@ -1,7 +1,7 @@
 <div class="project-detail-page">
   <div class="px-md-0 mx-3">
     <h1 class="mt-5 text-white text-end big">PROJECT DETAILS</h1>
-    <div class="text-white project rounded-3 p-md-5 p-4">
+    <div class="text-white project rounded p-md-5 p-4">
       <div class="py-4 pt-0 mx-0 row project-card">
         <div class="col-xl-8 col-lg-9 text-md-start text-center">
           <div class="row">
@@ -87,7 +87,7 @@
         }
       </div>
       <!-- drag -->
-      <div class="drag-area text-center rounded-3 p-4">
+      <div class="drag-area text-center rounded p-4">
         <div class="dataShow d-flex align-items-center gap-2">
           @for (file of files; track  $index) {
           <div class="file-card d-flex align-items-center gap-2">
@@ -107,7 +107,7 @@
      [disabled]="isLoading()"
         [style.cursor]="isLoading() ? 'not-allowed' : 'pointer'"
         
-        class="border-0 rounded-3 w-100 text-white small py-2 mt-4"
+        class="border-0 rounded w-100 text-white small py-2 mt-4"
           style="background-color: #0b6b6e">
                  {{ isLoading() ? 'UPLOADING...' : 'UPLOAD' }}
 
@@ -121,7 +121,7 @@
       <div class="row mx-0 mt-2">
         <div class="col-6 text-start  pt-md-3 pt-4 ps-0">
 <button
-  class="border-0 rounded-3 text-white small px-md-4 px-3 pt-1 mt-4 end-but"
+  class="border-0 rounded text-white small px-md-4 px-3 pt-1 mt-4 end-but"
   style="background-color: #0b6b6e"
   (click)="changeStatus()">
 
