--- a/src/app/Pages/projects/projects-profile/projects-profile.html
+++ b/src/app/Pages/projects/projects-profile/projects-profile.html
@@ -6,7 +6,7 @@
             <h1 class=" big">PROJECTS</h1>
 
         </div>
-        <div class="p-md-4 p-3 px-md-5 pb-lg-5 pb-3 rounded-3 g-4 row projects pe-lg-4 ">
+        <div class="p-md-4 p-3 px-md-5 pb-lg-5 pb-3 rounded g-4 row projects pe-lg-4 ">
             <div class="px-0 mb-4 pt-4 pb-2 rounded col-lg-7 d-flex blue">
                 <div class="p-0 text-center col me-5">
                     <p class="mb-0">Completed</p>
@@ -31,7 +31,7 @@
                         <span class="selected fs-2">{{ selected() }}</span>
 
                     </div>
-                    <ul class="p-3 rounded-3 menu list-unstyled text-end" [class.menu-open]="isOpen">
+                    <ul class="p-3 rounded menu list-unstyled text-end" [class.menu-open]="isOpen">
                         <li *ngFor="let option of options" (click)="selectOption(option)"
                             [class.active]="selected() === option">
                             {{ option }}
@@ -46,7 +46,7 @@
 
                 @for (project of filteredProjects(); track project.id) {
                 <a [routerLink]="['/projectDetails', project.id]"
-                    class="p-4 mx-0 mb-lg-3 row rounded-3 project-card mb-3 text-decoration-none text-white mt-0">
+                    class="p-4 mx-0 mb-lg-3 row rounded project-card mb-3 text-decoration-none text-white mt-0">
 
                     <div class="col-lg-9 col-xl-8">
                         <div class="row">
@@ -74,7 +74,7 @@
                             </div>
 
                             <div class="px-0 text-center text-lg-start">
-                                <button class="border-0 rounded-3 mt-lg-4 mt-3 pt-lg-2 pt-1 px-4 text-white"
+                                <button class="border-0 rounded mt-lg-4 mt-3 pt-lg-2 pt-1 px-4 text-white"
                                     [style.background-color]="'#0B6B6E'">
                                     @switch (project.projectStatus) {
                                     @case (0) { <p class=" mb-0 ">IN PROGRESS</p> }
@@ -94,7 +94,7 @@
                             <div class="d-flex px-0 justify-content-lg-end justify-content-start">
                                 @for (person of project.employees; track $index) {
                                 <div class="me-2">
-                                    <img [src]="baseurl + person.imageUrl" class="rounded-3" alt="" height="67" width="67"
+                                    <img [src]="baseurl + person.imageUrl" class="rounded" alt="" height="67" width="67"
                                         style="object-fit: cover;">
                                 </div>
                                 }
